ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poc-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: front-end
    servicePort: 80
  rules:
  - host: abhinavppp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 8080
      - path: /me
        backend:
          serviceName: back-end
          servicePort: 8090
